// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load station status load 1 with no queues: load 1 with no queues 1`] = `
Object {
  "allJobsHaveRawMatQueue": false,
  "face": Map {
    "1" => Array [],
  },
  "free": undefined,
  "freeLoadingMaterial": Array [
    Object {
      "Action": Object {
        "ElapsedLoadUnloadTime": undefined,
        "ElapsedMachiningTime": undefined,
        "ExpectedRemainingMachiningTime": undefined,
        "LoadOntoFace": 1,
        "LoadOntoPallet": "1",
        "PathAfterLoad": 1,
        "ProcessAfterLoad": 1,
        "Program": undefined,
        "Type": "Loading",
        "UnloadIntoQueue": undefined,
      },
      "JobUnique": "aaa-offline-2018-01-01",
      "LastCompletedMachiningRouteStopIndex": undefined,
      "Location": Object {
        "CurrentQueue": undefined,
        "Face": undefined,
        "Pallet": undefined,
        "QueuePosition": undefined,
        "Type": "Free",
      },
      "MaterialID": 100663,
      "PartName": "bbb",
      "Path": 1,
      "Process": 1,
      "Serial": "NRWGM",
      "SignaledInspections": Array [],
      "WorkorderId": undefined,
    },
  ],
  "loadNum": 1,
  "pallet": Object {
    "CurrentPalletLocation": Object {
      "group": "L/U",
      "loc": "LoadUnload",
      "num": 1,
    },
    "FixtureOnPallet": "fix1",
    "NewFixture": undefined,
    "NumFaces": 2,
    "OnHold": false,
    "Pallet": "1",
    "PercentMoveCompleted": undefined,
    "TargetLocation": undefined,
  },
  "queues": Map {},
  "stationStatus": undefined,
}
`;

exports[`load station status load 2 with queue: load 2 with queue 1`] = `
Object {
  "allJobsHaveRawMatQueue": false,
  "face": Map {
    "1" => Array [],
  },
  "free": undefined,
  "freeLoadingMaterial": Array [],
  "loadNum": 2,
  "pallet": Object {
    "CurrentPalletLocation": Object {
      "group": "L/U",
      "loc": "LoadUnload",
      "num": 2,
    },
    "FixtureOnPallet": "fix5",
    "NewFixture": undefined,
    "NumFaces": 1,
    "OnHold": false,
    "Pallet": "5",
    "PercentMoveCompleted": undefined,
    "TargetLocation": undefined,
  },
  "queues": Map {
    "Queue1" => Array [
      Object {
        "Action": Object {
          "ElapsedLoadUnloadTime": undefined,
          "ElapsedMachiningTime": undefined,
          "ExpectedRemainingMachiningTime": undefined,
          "LoadOntoFace": undefined,
          "LoadOntoPallet": undefined,
          "PathAfterLoad": undefined,
          "ProcessAfterLoad": undefined,
          "Program": undefined,
          "Type": "Waiting",
          "UnloadIntoQueue": undefined,
        },
        "JobUnique": "aaa-offline-2018-01-01",
        "LastCompletedMachiningRouteStopIndex": undefined,
        "Location": Object {
          "CurrentQueue": "Queue1",
          "Face": undefined,
          "Pallet": undefined,
          "QueuePosition": 0,
          "Type": "InQueue",
        },
        "MaterialID": 104289,
        "PartName": "aaa",
        "Path": 1,
        "Process": 1,
        "Serial": "MRYHE",
        "SignaledInspections": Array [],
        "WorkorderId": undefined,
      },
      Object {
        "Action": Object {
          "ElapsedLoadUnloadTime": undefined,
          "ElapsedMachiningTime": undefined,
          "ExpectedRemainingMachiningTime": undefined,
          "LoadOntoFace": undefined,
          "LoadOntoPallet": undefined,
          "PathAfterLoad": undefined,
          "ProcessAfterLoad": undefined,
          "Program": undefined,
          "Type": "Waiting",
          "UnloadIntoQueue": undefined,
        },
        "JobUnique": "xxx-offline-2018-01-01",
        "LastCompletedMachiningRouteStopIndex": undefined,
        "Location": Object {
          "CurrentQueue": "Queue1",
          "Face": undefined,
          "Pallet": undefined,
          "QueuePosition": 1,
          "Type": "InQueue",
        },
        "MaterialID": 104458,
        "PartName": "xxx",
        "Path": 1,
        "Process": 1,
        "Serial": "NBVHA",
        "SignaledInspections": Array [],
        "WorkorderId": undefined,
      },
      Object {
        "Action": Object {
          "ElapsedLoadUnloadTime": undefined,
          "ElapsedMachiningTime": undefined,
          "ExpectedRemainingMachiningTime": undefined,
          "LoadOntoFace": 1,
          "LoadOntoPallet": "5",
          "PathAfterLoad": 1,
          "ProcessAfterLoad": 1,
          "Program": undefined,
          "Type": "Loading",
          "UnloadIntoQueue": undefined,
        },
        "JobUnique": "zzz-offline-2018-01-01",
        "LastCompletedMachiningRouteStopIndex": undefined,
        "Location": Object {
          "CurrentQueue": "Queue1",
          "Face": undefined,
          "Pallet": undefined,
          "QueuePosition": 2,
          "Type": "InQueue",
        },
        "MaterialID": 102304,
        "PartName": "zzz",
        "Path": 1,
        "Process": 1,
        "Serial": "MZQGQ",
        "SignaledInspections": Array [],
        "WorkorderId": undefined,
      },
    ],
  },
  "stationStatus": undefined,
}
`;

exports[`load station status load 3 with empty pallet: load 3 with empty pallet 1`] = `
Object {
  "allJobsHaveRawMatQueue": false,
  "face": Map {},
  "free": undefined,
  "freeLoadingMaterial": Array [],
  "loadNum": 3,
  "pallet": undefined,
  "queues": Map {
    "Queue2" => Array [
      Object {
        "Action": Object {
          "ElapsedLoadUnloadTime": undefined,
          "ElapsedMachiningTime": undefined,
          "ExpectedRemainingMachiningTime": undefined,
          "LoadOntoFace": undefined,
          "LoadOntoPallet": undefined,
          "PathAfterLoad": undefined,
          "ProcessAfterLoad": undefined,
          "Program": undefined,
          "Type": "Waiting",
          "UnloadIntoQueue": undefined,
        },
        "JobUnique": "ccc-offline-2018-01-01",
        "LastCompletedMachiningRouteStopIndex": undefined,
        "Location": Object {
          "CurrentQueue": "Queue2",
          "Face": undefined,
          "Pallet": undefined,
          "QueuePosition": 0,
          "Type": "InQueue",
        },
        "MaterialID": 104824,
        "PartName": "ccc",
        "Path": 1,
        "Process": 1,
        "Serial": "OBSGQ",
        "SignaledInspections": Array [],
        "WorkorderId": undefined,
      },
      Object {
        "Action": Object {
          "ElapsedLoadUnloadTime": undefined,
          "ElapsedMachiningTime": undefined,
          "ExpectedRemainingMachiningTime": undefined,
          "LoadOntoFace": undefined,
          "LoadOntoPallet": undefined,
          "PathAfterLoad": undefined,
          "ProcessAfterLoad": undefined,
          "Program": undefined,
          "Type": "Waiting",
          "UnloadIntoQueue": undefined,
        },
        "JobUnique": "zzz-offline-2018-01-01",
        "LastCompletedMachiningRouteStopIndex": undefined,
        "Location": Object {
          "CurrentQueue": "Queue2",
          "Face": undefined,
          "Pallet": undefined,
          "QueuePosition": 1,
          "Type": "InQueue",
        },
        "MaterialID": 105125,
        "PartName": "zzz",
        "Path": 1,
        "Process": 1,
        "Serial": "MJSGU",
        "SignaledInspections": Array [],
        "WorkorderId": undefined,
      },
    ],
  },
  "stationStatus": Map {
    "Machine #1" => Object {
      "pal": Object {
        "material": Array [],
        "pallet": Object {
          "CurrentPalletLocation": Object {
            "group": "Machine",
            "loc": "Machine",
            "num": 1,
          },
          "FixtureOnPallet": "fix4",
          "NewFixture": undefined,
          "NumFaces": 2,
          "OnHold": false,
          "Pallet": "4",
          "PercentMoveCompleted": undefined,
          "TargetLocation": undefined,
        },
      },
    },
    "Machine #2" => Object {
      "pal": Object {
        "material": Array [],
        "pallet": Object {
          "CurrentPalletLocation": Object {
            "group": "Machine",
            "loc": "Machine",
            "num": 2,
          },
          "FixtureOnPallet": "fix6",
          "NewFixture": undefined,
          "NumFaces": 1,
          "OnHold": false,
          "Pallet": "6",
          "PercentMoveCompleted": undefined,
          "TargetLocation": undefined,
        },
      },
      "queued": Object {
        "material": Array [],
        "pallet": Object {
          "CurrentPalletLocation": Object {
            "group": "Machine",
            "loc": "MachineQueue",
            "num": 2,
          },
          "FixtureOnPallet": "fix7",
          "NewFixture": undefined,
          "NumFaces": 1,
          "OnHold": false,
          "Pallet": "7",
          "PercentMoveCompleted": undefined,
          "TargetLocation": undefined,
        },
      },
    },
    "Machine #3" => Object {
      "pal": Object {
        "material": Array [],
        "pallet": Object {
          "CurrentPalletLocation": Object {
            "group": "Machine",
            "loc": "Machine",
            "num": 3,
          },
          "FixtureOnPallet": "fix8",
          "NewFixture": undefined,
          "NumFaces": 1,
          "OnHold": false,
          "Pallet": "8",
          "PercentMoveCompleted": undefined,
          "TargetLocation": undefined,
        },
      },
    },
    "L/U #1" => Object {
      "pal": Object {
        "material": Array [],
        "pallet": Object {
          "CurrentPalletLocation": Object {
            "group": "L/U",
            "loc": "LoadUnload",
            "num": 1,
          },
          "FixtureOnPallet": "fix1",
          "NewFixture": undefined,
          "NumFaces": 2,
          "OnHold": false,
          "Pallet": "1",
          "PercentMoveCompleted": undefined,
          "TargetLocation": undefined,
        },
      },
    },
    "L/U #2" => Object {
      "pal": Object {
        "material": Array [],
        "pallet": Object {
          "CurrentPalletLocation": Object {
            "group": "L/U",
            "loc": "LoadUnload",
            "num": 2,
          },
          "FixtureOnPallet": "fix5",
          "NewFixture": undefined,
          "NumFaces": 1,
          "OnHold": false,
          "Pallet": "5",
          "PercentMoveCompleted": undefined,
          "TargetLocation": undefined,
        },
      },
    },
  },
}
`;
